--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "4.0.3",
     "three": "^0.127.0",
     "typescript": "^4.2.4",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "engine-wasm": "file:../engine-wasm/pkg"
   },
   "scripts": {
     "start": "craco start",
