--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,14 @@
     "@types/node": "^12.20.10",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "engine-wasm": "file:../engine-wasm/pkg",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "three": "^0.127.0",
     "typescript": "^4.2.4",
-    "web-vitals": "^1.1.1",
-    "engine-wasm": "file:../engine-wasm/pkg"
+    "wasm-loader": "^1.3.0",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "craco start",
