--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "three": "^0.127.0",
     "typescript": "^4.2.4",
     "wasm-loader": "^1.3.0",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "zustand": "^3.4.1"
   },
   "scripts": {
     "start": "craco start",
