--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@headlessui/react": "^1.0.0",
     "@react-three/drei": "^4.1.8",
     "@react-three/fiber": "^6.0.14",
     "@testing-library/jest-dom": "^5.11.10",
