--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@craco/craco": "^6.1.1",
     "@headlessui/react": "^1.0.0",
+    "@heroicons/react": "^1.0.1",
     "@react-three/drei": "^4.1.8",
     "@react-three/fiber": "^6.0.14",
     "@testing-library/jest-dom": "^5.11.10",
