--- a/engine-wasm/Cargo.toml
+++ b/engine-wasm/Cargo.toml
@@ -13,6 +13,7 @@ default = ["console_error_panic_hook"]
 [dependencies]
 wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
 engine = { path = "../engine" }
+serde = "1.0.125"
 
 [target.wasm32-unknown-unknown.dependencies]
 getrandom = { version = "0.2", features = ["js"] }
