--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.9",
     "three": "^0.127.0",
     "typescript": "^4.2.4",
     "wasm-loader": "^1.3.0",
